--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -14,6 +14,7 @@
 	</th:block>
 
 	<a href="/templates/mainp/mainp.html">메인 페이지</a>
+	<a href="/signup/joinPage.do">회원가입 페이지</a>
 	<a href="/reservation/terms.do">약관 페이지</a>
 	<a href="/reservation/pay.do">결제 페이지</a>
 	<a href="/reservation/payComplete.do">결제 완료 페이지</a>
