--- a/src/main/resources/templates/signup/joinPage.html
+++ b/src/main/resources/templates/signup/joinPage.html
@@ -7,19 +7,20 @@
 <link rel="stylesheet" href="/css/signup/joinPage.css">
 </head>
 <body>
+<header th:include="/headerNav"></header>
 
 <br>
-	<h1>회원 가입</h1>
-			<hr>
-<main class="container">
-	
-		
-			<h2>약관 동의</h2>
+	<p class="h1d">회원 가입</p>
+	<hr>
+<main class="container">	
+			<div class="box1"> 
+			<p  class="h2d ">약관 동의</p>
 	
 			<p>JB항공 회원으로 가입하기 위해서는 이용약관, 개인정보처리방침에 동의하셔야 합니다.</p>
+			</div>
 			 <form action="/" method="POST" id="form__wrap">
 			  <div class="input__check">
-			<h3>JB항공 이용약관 동의 </h3>
+			<h4>JB항공 이용약관 동의 </h4>
 			<div style="height: 170px; padding:0 20px 20px 20px; overflow-y : auto; width: 98%;box-sizing: border-box;border: 1px solid #ccc;margin: 10px; line-height: 20px;" tabindex="0">
 
 		<br>제 1장 총칙<br>
@@ -144,7 +145,7 @@
 			</div>
 			<br>
 			 <div class="input__check">
-			<h3>개인정보 수집 및 이용 동의</h3>
+			<h4>개인정보 수집 및 이용 동의</h4>
 			<div style="height: 170px; padding: 20px; overflow-y : auto; width: 98%;box-sizing: border-box;border: 1px solid #ccc;margin: 10px; line-height: 22px;" tabindex="0">
 		<b>가. 개인정보의 수집 및 이용 목적</b><br>
 		① JB항공은 다음의 목적을 위하여 개인정보를 처리합니다. 처리하고 있는 개인정보는 다음의 목적 이외의 용도로는 이용되지 않으며, 이용 목적이 변경되는 경우에는 개인정보 보호법 제18조에 따라 별도의 동의를 받는 등 필요한 조치를 이행할 예정입니다.<br>
@@ -183,7 +184,7 @@
             ></strong></h3>
           </div>
           <br>
-          <div class="text-center">
+          <div class="btn2 " >
           
            <button type="submit" onclick="location.href='/signup/joinPage2.do'" id="btid" class="button2" disabled>확인</button>
           </div>
