--- a/src/main/resources/templates/signup/joinPage2.html
+++ b/src/main/resources/templates/signup/joinPage2.html
@@ -9,17 +9,20 @@
 	<script src="/bootstrap/js/bootstrap.min.js"></script>
 </head>
 <body>
+<header th:include="/headerNav"></header>
 
 <br>
-			<h1>회원 가입</h1>
-			<hr>
-<main class="container mx-auto mt-5"  style="max-width:600px;">
+	<p class="h1d">회원 가입</p>
+	<hr>
+<main class="container mx-auto mt-5"  style="max-width:650px;">
 
 			<h2><strong>회원 정보 입력</strong></h2>
 			<p>회원가입에 필요한 정보를 입력합니다.</p>
 			
 		
 	<form name="userInsertForm" action="/signup/joinPage2.do" method="post" class="mt-4">
+	<input type="hidden" id="ctCreate" name="ctCreate" maxlength="10" th:value="${#calendars.format(#calendars.createNow(), 'HH:mm:ss yyyy-MM-dd')}" readonly>
+	
 		<div class="input-container">
 				<label class="joinp">아아디</label>
 				<div class="form-floating mb-3">
@@ -63,7 +66,7 @@
 		
 		<div class="input-container"> <label class="joinp">이름</label>
 			<div class="form-floating mb-3">
-			  <input name="ctName"   th:name="name" th:value="${ctName}"  type="text" class="form-control" onkeyup="checkReg(event)" id="name" placeholder="ID" >
+			  <input name="ctName"   type="text" class="form-control" onkeyup="checkReg(event)" id="name" placeholder="ID" >
 			  <label  for="name">한글만 입력해주세요.</label>
 			</div>		
 		</div>
@@ -77,9 +80,10 @@
 		
 		<div class="input-container"><label class="joinp">이메일</label>
 			<div class="form-floating mb-3">
-			   <input id="email"  type="text" class="form-control" placeholder="happy1234@naver.com" name="ctEmail" value="">
-				  <label  for="email">happy1234@naver.com</label>
+			   <input id="email"  type="text" class="form-control is-valid" placeholder="happy1234@naver.com" name="ctEmail" value="">
+				  <label for="inputUserId">@@</label>
 			</div>		
+			
 		</div>
 		
 			<div class="input-container mb-3">
@@ -101,10 +105,8 @@
 					value=>
 					<p>
 		</div>
-		
+		<br>
 				<div class="text-center " >
-		
-				
 				<button class="button3" type="reset">다시입력</button>
 				<button type="button" id="target_btn" class="button4" onclick="joinform_check()" disabled >가입하기</button>
 				</div>
