--- a/src/main/resources/static/css/reservation/reservationSearch.css
+++ b/src/main/resources/static/css/reservation/reservationSearch.css
@@ -1005,9 +1005,15 @@ select {
 }
 
 .modal-body .research_option_container{
-    display: inline;
-    width: 1100px;
+    display: flex;
+    width: 100%;
     padding: 10px 0;
+    justify-content: center;
+}
+
+.research_option_container .option_container{
+    width: 1100px;
+    max-width: 100%;
 }
 
 .option_selector{
@@ -1091,15 +1097,76 @@ select {
 }
 .research_plan .passenger_count{
     padding-top: 45px;
+    display: flex;
 }
 
 .passenger_count .sub-passenger-tit{
     width: 100%;
+    font-weight: bold;
+    padding-bottom: 10px;
     text-align: left;
 }
 
-.research_plan .btn-group{
-    width: 100%;
+.passenger_count .count_box{
+    max-width: 100%;
+    padding-right: 20px;
+    display: flex;
+    align-items: flex-start;
+    flex-direction: column;
 }
 
+.count_box .btn-group{
+    width: 130px;
+    max-width: 100%;
+    height: 35px;
+}
+
+.count_box .btn-group .btn{
+    background-color: #fff;
+    color: #000000;
+    border: none;
+    outline: 1px solid #a7a7a7;
+    flex: 1;
+}
+
+.count_box .input_container{
+    height: 100%;
+    outline: 1px solid #a7a7a7;
+    line-height: 35px;
+}
+
+.count_box .btn-group input{
+    width: 80%;
+    text-align: center;
+    vertical-align: middle;
+    border-color: rgba(167, 167, 167, 0);
+    flex: 3;
+}
+
+.count_box .btn-group input:focus{
+    border-color: rgba(167, 167, 167, 255);
+    border-radius: 0;
+}
+
+.modal-footer{
+    justify-content: center;
+}
+
+.modal-footer .btn_group{
+    width: 1100px;
+    max-width: 100%;
+    display: flex;
+    justify-content: center;
+}
+
+.modal-footer .btn_group .btn{
+    margin: 0 8px;
+    width: 150px;
+    height: 50px;
+    padding: 0;
+    line-height: 50px;
+    max-width: 100%;
+    max-height: 100%;
+    border-radius: 2px;
+}
 /* EOL: research modal window */
