--- a/src/main/resources/templates/footerNav.html
+++ b/src/main/resources/templates/footerNav.html
@@ -12,13 +12,13 @@
 		</div>
 		<div class="f_addr">
 			<p>
-				<span>대표이사. 홍길동</span> |
-				<span>사업자등록번호. 101-00-00000</span> |
-				<span>주소. 경기도 고양시 덕양구 동헌로 305</span>
+				<span>고객센터. 1688-1688</span> |
+				<span>(9:00 ~ 19:00)</span>
 			</p>
 			<p>
-				<span>통신판매업신고번호. 2022-경기고양-0000</span> |
-				<span>개인정보 관리책임자. 경영본부장 홍길동</span>
+				<span>대표이사. 나나나</span> |
+				<span>사업자등록번호. 101-00-00000</span> |
+				<span>주소. 경기도 고양시 덕양구 동헌로 305</span>
 			</p>
 			<copyright>Copyright ⓒ 2022 JB Air. All Rights Reserved.</copyright>
 		</div>
