--- a/src/main/resources/static/css/headerNav.css
+++ b/src/main/resources/static/css/headerNav.css
@@ -1,22 +1,22 @@
-a {
-    text-decoration: none;
-    color: #222;
-}
 nav {
     width: 1100px;
     margin: auto;
 }
 nav > div {
-    height: 70px;
-     line-height: 70px;
+    height: 80px;
+    line-height: 80px;
+}
+nav > div > a {
+    text-decoration: none;
+    color: #222;
 }
 .logo {
     float: left;
-    width: 140px;
-    text-align: center;
+    width: 100px;
+    font-size: 25px;
 }
 .gnb {
-    width: 770px;
+    width: 660px;
     display: inline-block;
     text-align: center;
 }
@@ -25,9 +25,12 @@ nav > div {
 }
 .lnb {
     float: right;
-    width: 180px;
+    width: 333px;
     text-align: center;
 }
 .lnb a {
-    margin: 5px;
+    margin: 8px;
 }
+
+
+
