--- a/src/main/resources/static/css/index.css
+++ b/src/main/resources/static/css/index.css
@@ -1,16 +1,14 @@
-
-* {
+/* * {
 	padding: 0;
 	margin: 0;
 	width: 1100px;
 	margin: 0 auto;
-}
+} */
 
-/* Google Web Font */
-@import url('https://fonts.googleapis.com/css?family=Montserrat:300,400,500&display=swap');
 body {
-    font-family: 'Montserrat', sans-serif;
-    line-height: 1.5em;
+	padding: 0;
+	width: 1100px;
+	margin: 0 auto;
     font-size: 15px;
 }
 
@@ -23,46 +21,82 @@ ul{
    list-style:none;
 }
    
+   
 /* 광고, 예매 */
-.main_text{
+.main_content{
 	width: 100%;
 	height: 500px;
 	background: #f2f2f3;
+}
+.main_content .image{
+	border: 1px solid black;
+	width: 50%;
+	height: 500px;
+	float: left;
+	box-sizing: border-box;
+}
+.main_content .reserve{
+	border: 1px solid black;
+	width: 50%;
+	height: 500px;
+	float: right;
+	box-sizing: border-box;
+	background: cornflowerblue;
+}
+.reserve_name{
+	border: 1px solid black;
+	background: darkblue;
+	color: white;
+}
+form{
+	border: 1px solid black;
+	background: white;
+}
+.tripselect_btn{
+	width: 50%;
 }
 
 /* 할인 */
 .discount{
 	width: 100%;
-	height: 330px;
+	height: 370px;
+	margin: 45px 0 45px 0;
 }
 .icons{
 	display: flex;
 	margin: auto;
+	padding: 0;
 }
 .icons > li{
+	/* border: 1px solid black; */
 	flex: 1;
-	height: 330px;
+	height: 320px;
+	text-align: center;
+	margin: 30px;
 }
-/* .icons > li:not(:last-child){
-	margin-right: 20px; 
-} */
+.icons .discount_contents{
+	font-weight: bold;
+}
+img{
+	border-radius: 50%;
+}
 
 /* 회원해택 */
 .member{
 	width: 100%;
-	height: 250px;
+	height: 230px;
 }
-.member .mbox{
+.member .member-box{
 	width: 80%;
 	height: 110px;
+	margin-top: 25px;
+	margin-left: 105px;
 	background: #ffb6c1;
-	margin-top: 15px;
+	display : flex;
+ 	justify-content: center;
+  	align-items : center;
 }
-.mbox p{
-	width: 80%;
-	margin: 0 auto;
-	text-align: center;
-}
+
 
 
 
